1. added exif-js package to read exif data of images 2. added auto-rotation mechanism to automatically rotate images whenever they get uploaded 3. added a parameter that indicates whether auto_rotation is on or off 4. modified the fileRead() function to reuse the canvas of the resize logic

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   },
   "homepage": "https://github.com/viral-vector/vue-upload-image",
   "dependencies": {
-        
+    "exif-js": "^2.3.0"
   }
 }
